--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <link href="css/jquery-ui.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <link rel="stylesheet" href="plugins/OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css">
-  <link rel="stylesheet" href="plugins/OwlCarousel2-2.3.4/dist/assets/owl.theme.default.min.css">
+
   <title>Kiwi Getaway</title>
 </head>
 <body>
@@ -161,34 +160,15 @@
     <div id="map"> </div>
 
 
-    <!-- SLIDESHOW -->
-
-    <!-- <div id="slideshow">
-      <div class="owl-carousel owl-theme">
-        <div class="item"><img src="css/images/aucklandcity.jpg" alt="Auckland City landscape"></div>
-        <div class="item"><img src="css/images/Skywalk-Auckland.jpg" alt="woman on Skywalk Auckland"></div>
-        <div class="item"><img src="css/images/wellingtoncity.jpg" alt="Wellngton City landscape"></div>
-        <div class="item"><img src="css/images/wellingtonhobbiton.jpg" alt="Hobbiton in Wellington"></div>
-        <div class="item"><img src="css/images/queenstown.jpg" alt="Queenstown landscape"></div>
-        <div class="item"><img src="css/images/queenstownski.jpg" alt="Skiing in Queenstown"></div>
-      </div>
-    </div> -->
-
-
     <!-- POP UP PAGE -->
     <div id="accommPopUp" class="l-overlay">
       <div class="l-overlay-content">
         <div class="row">
-          <div class="col-12 col-lg-12 pb-1">
+          <div class="col-12 col-lg-12">
             <div class="close-banner">
             </div>
-            <div class="owl-carousel owl-theme">
-              <div class="item">
-                <img src="#" id="photo1" alt="accommodation exterior">
-              </div>
-              <div class="item">
-                <img src="#" id="photo2"  alt="accommodation room">
-              </div>
+            <div class="col-12 col-lg-12">
+                <img src="#" id="photo2" class="img-fluid w-100 pt-3 pb-3" alt="accommodation room">
             </div>
           </div>
         </div>
@@ -254,12 +234,11 @@
 <!-- FOOTER -->
 
 <footer class="navbar bg-secondary justify-content-center">
-  <div class="navbar-brand text-white"><p>Supported by Tourism New Zealand</p></div>
+  <div class="navbar-brand text-white"><p>Designed by Yana Brewster for a Yoobee Assignment</p></div>
 </footer>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAW3aCgBDekNn0L4XBT0rElBJovAQaWx-M&libraries=places"></script>
 <script src="js/jquery-3.4.1.min.js"> </script>
-<!-- <script src="plugins/OwlCarousel2-2.3.4/dist/owl.carousel.min.js"></script> -->
 <script src="js/jquery-ui.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 <script src="js/bootstrap.js"> </script>
