--- a/index.html
+++ b/index.html
@@ -234,7 +234,13 @@
 <!-- FOOTER -->
 
 <footer class="navbar bg-secondary justify-content-center">
-  <div class="navbar-brand text-white"><p>Designed by Yana Brewster for a Yoobee Assignment</p></div>
+  <div class="row">
+    <div class="col-12 col-lg-12 text-sm-center text-lg-center">
+      <div class="navbar-brand text-white">
+        <p>Designed by Yana Brewster for a Yoobee Assignment</p>
+      </div>
+    </div>
+  </div>
 </footer>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAW3aCgBDekNn0L4XBT0rElBJovAQaWx-M&libraries=places"></script>
