--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
 
 <footer class="navbar bg-secondary justify-content-center">
   <div class="row">
-    <div class="col-12 col-lg-12 text-sm-center text-lg-center">
+    <div class="col-12 col-lg-12 col-sm-12 text-sm-center text-lg-center">
       <div class="navbar-brand text-white">
-        <p>Designed by Yana Brewster for a Yoobee Assignment</p>
+        <p>Designed by Yana Brewster<br> for a Yoobee Assignment</p>
       </div>
     </div>
   </div>
