--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link href="css/jquery-ui.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
   <title>Kiwi Getaway</title>
@@ -247,6 +247,14 @@
 <script src="js/jquery-3.4.1.min.js"> </script>
 <script src="js/jquery-ui.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+<script>
+  Swal.fire({
+    title: 'Please Acknowledge',
+    text: 'This site is for education use only and is not a real site. This was for a Yoobee Colleges assignment, created by Yana Brewster',
+    confirmButtonText: 'I understand that this site is not real'
+  })
+</script>
 <script src="js/bootstrap.js"> </script>
 <script src="js/script.js"></script>
 
