link added to footer

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
   <div class="row">
     <div class="col-12 col-lg-12 col-sm-12 text-sm-center text-lg-center">
       <div class="navbar-brand text-white">
-        <p>Designed by Yana Brewster<br> for a Yoobee Assignment</p>
+        <p>Designed by <a href="https://www.yanabrewster.com">Yana Brewster</a><br> for a Yoobee Assignment</p>
       </div>
     </div>
   </div>
