alert text edited

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 <script>
   Swal.fire({
     title: 'Please Acknowledge',
-    text: 'This site is for education use only and is not a real site. This was for a Yoobee Colleges assignment, created by Yana Brewster',
+    text: 'This site is for education use only and is not a real site. This was created for a Yoobee Colleges assignment by Yana Brewster',
     confirmButtonText: 'I understand that this site is not real'
   })
 </script>
